# nebula.ai

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.selfhosted.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.gsd/: CODEBASE.md  DECISIONS.md  KNOWLEDGE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  event-log.jsonl  gsd.db-shm  gsd.db-wal  gsd.db.backup_before_verification_evidence_fix_20260411204301  gsd.db.bak_m006_reqfix_20260402221239  notifications.jsonl  state-manifest.json  v2.0-MILESTONE-AUDIT.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
.tmp/: M006-S02-RESEARCH.md  s04_research.md
benchmarks/: pricing.json
console/: .env.example  Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
deploy/: selfhosted.env  selfhosted.env.example
docs/: adoption-api-contract.md  architecture.md  day-1-value.md  demo-script.md  embeddings-adoption-contract.md  embeddings-integrated-adoption-proof.md  embeddings-reference-migration.md  evaluation.md  hosted-default-export.schema.json  hosted-integrated-adoption-proof.md  hosted-reinforcement-boundary.md  integrated-adoption-proof.md  m006-integrated-proof.md  m007-integrated-proof.md  m008-integrated-proof.md  m009-integrated-proof.md  pilot-checklist.md  policy-guardrails.md  production-model.md  quickstart.md  reference-migration.md  route-decision-vocabulary.md  self-hosting.md  (+1 more)
(+849 files in other folders)
