[project]
name = "nebula"
version = "0.1.0"
description = "Semantic AI Gateway for routing, caching, and fallback across LLM providers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "qdrant-client>=1.10.0,<2.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
    "sqlalchemy>=2.0.39,<3.0.0",
    "alembic>=1.14.1,<2.0.0",
    "psycopg[binary]>=3.2.6,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.5.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
